<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cuates_de_sistemas_itt.conversa_tec.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <!-- Titulo de la App -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondaryLight"
                android:textSize="24dp"
                android:textStyle="bold" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <!--TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible">

                <ImageButton
                    android:id="@+id/btnProfesor"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:longClickable="true"
                    android:padding="27dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_profesor"
                    android:tint="#4a4a4a"
                    android:visibility="invisible" />

                <ImageButton
                    android:id="@+id/btnUnirseClase"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:longClickable="true"
                    android:padding="27dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_unirse_clase"
                    android:tint="#4a4a4a"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profesor"
                    android:textAlignment="center"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unirse_a_clase"
                    android:textAlignment="center"
                    android:visibility="invisible" />
            </TableRow-->

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageButton
                    android:id="@+id/btnClaseDirecta"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:longClickable="true"
                    android:src="@drawable/ic_clase_directa"
                    android:padding="27dp"
                    android:tint="#4a4a4a"
                    android:scaleType="fitCenter"/>

                <ImageButton
                    android:id="@+id/btnQuickTalk"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:adjustViewBounds="false"
                    android:longClickable="true"
                    android:padding="27dp"
                    android:tint="#4a4a4a"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_quick_talk" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clase_directa"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quick_talk"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageButton
                    android:id="@+id/btnlistadeClases"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:longClickable="true"
                    android:tint="#4a4a4a"
                    android:src="@drawable/ic_lista_clases"
                    android:padding="27dp"
                    android:scaleType="fitCenter"/>
                <ImageButton
                    android:id="@+id/btnAjustes"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:longClickable="true"
                    android:tint="#4a4a4a"
                    android:src="@drawable/ic_configuration"
                    android:padding="27dp"
                    android:scaleType="fitCenter"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/historial"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ajustes"
                    android:textAlignment="center" />
            </TableRow>
        </TableLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
